--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 
                 <div class="collection-card dessert-collection">
                     <div class="collection-image">
-                           <img src="images/sweet dream 1.png" alt="Logo" width="300" height="auto">
+                           <img src="sweet dream 1.png" alt="Logo" width="300" height="auto">
                         <div class="collection-placeholder">
                             <i class="fas fa-ice-cream collection-icon"></i>
                         </div>
@@ -306,4 +306,5 @@
         </div>
     </footer>
 </body>
+
 </html>
